# varsubst

./: .bumpversion.toml  .clang-format  .gitignore  .pdbrc  .readthedocs.yaml  README.md  Taskfile.yaml  meson.build  pyproject.toml
.dev/: Dockerfile  compose.yaml  requirements-dev.txt  requirements-res.txt  requirements.txt
docs/: conf.py  index.rst
docs/_static/: readthedocs.js
research/: syntax.py  test_compose243.py  test_dc243.py  test_genv.py
src/: aux.h  auxil.h  const.c  debug.c  detail.c  error.c  main.c  syntax.h  util.c  util.h  vsub.c  vsub.h  vsub_io.c  vsub_io.h  vsubio.c  vsubio.h
src/input/: text_file.c  text_str.c  vars_arglist.c  vars_arrays.c  vars_env.c
src/output/: json.c  plain.c  pretty.c
src/syntax/: compose243.c  compose243.h  compose243.peg  envsubst.c  envsubst.h  envsubst.peg
src/syntax/dc243/: parser.c  parser.h  parser.peg
src/syntax/default/: parser.c  parser.h  parser.peg
tests/: conftest.py  test_cli.py  test_sx_default.py
tests/research/: test_dc243.py
